<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:padding="10dp">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_your_information"
        android:textColor="#000"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#000"
        android:textColorHint="#999" />

    <EditText
        android:id="@+id/edit_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_user_name"
        android:hint="@string/phone_hint"
        android:inputType="number"
        android:textColor="#000"
        android:textColorHint="#999"
        tools:ignore="TextFields" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/spinner_edit_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt"
        android:layout_below="@+id/edit_user_phone"
        android:hint="@string/chose_your_city"
        android:textColor="#000"
        tools:ignore="RtlCompat" />
</RelativeLayout>