<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:fitsSystemWindows="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <ProgressBar
        android:id="@+id/progressbar_login"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:backgroundTint="@color/colorPrimary"
        android:indeterminate="true"
        android:indeterminateTint="@color/blue"
        android:max="100"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/txt_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/logopharmakhana"
                app:civ_border_color="#FF000000"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="-1"
                tools:ignore="RtlCompat" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_input1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textColorHint="#999">

                        <EditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:background="@drawable/selectorbgedit"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="8dp"

                            android:textCursorDrawable="@drawable/bginputcursor"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_input1"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/txt_input2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="30dp"
                            android:orientation="horizontal"
                            android:textColorHint="#999"
                            tools:ignore="RtlCompat">

                            <EditText
                                android:id="@+id/edit_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="1dp"
                                android:background="@drawable/selectorbgedit"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:padding="8dp"
                                android:textCursorDrawable="@drawable/bginputcursor"
                                android:textSize="15sp">

                            </EditText>

                        </android.support.design.widget.TextInputLayout>

                        <CheckBox
                            android:id="@+id/check_show_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            tools:ignore="RtlCompat" />
                    </RelativeLayout>


                    <CheckBox
                        android:id="@+id/check_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/line1"
                        android:layout_marginTop="10dp"
                        android:text="@string/remember_me"
                        tools:ignore="NotSibling,RtlCompat" />

                    <TextView
                        android:id="@+id/txt_reset_passowrd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/check_remember_me"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:clickable="true"
                        android:gravity="bottom"
                        android:text="@string/reset_password"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="NotSibling,RtlCompat"
                        android:focusable="true" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_reset_passowrd"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_bg"
                        android:clickable="true"
                        android:padding="10dp"

                        android:text="@string/log_in"
                        android:textColor="@color/red2"
                        android:textSize="18sp"
                        android:focusable="true" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/btn_login"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:text="@string/not_account_yet"
                        android:textColor="#fff"
                        android:focusable="true" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt2"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/btn_bg2"
                        android:clickable="true"
                        android:padding="10dp"
                        android:text="@string/sign_up"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:focusable="true" />
                </RelativeLayout>

            </FrameLayout>


        </RelativeLayout>

    </ScrollView>


</LinearLayout>



